syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;streamv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "StreamDataProto";

// 流数据帧
message FrameData {
  int32 frame_size = 1;     // 帧大小
  int32 split_count = 2;    // 分割数量
  int32 split_seq = 3;       // 分割序号
  bytes frame_data = 4;      // 帧数据
}

// 流数据请求
message StreamDataRequest {
  int32 start_frame = 1;     // 起始帧
}

// 流数据响应
message StreamDataResponse {
  int32 error = 1;           // 错误码
  int32 req_frame = 2;       // 请求帧
  int32 end_frame = 3;        // 结束帧
  repeated FrameData frames = 4;  // 帧列表
}
